packaging/aws-cloudformation/openmanage.template
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description": "This template deploys an OpenManage ECS cluster on an existing VPC. The BastionSecurityGroupID is allowed to ssh to the ECS cluster nodes and access the openmanage manage http server",
  "Parameters":{
    "BastionSecurityGroupID": {
      "Description": "ID of the Bastion Security Group (e.g., sg-7f16e910)",
      "Type": "AWS::EC2::SecurityGroup::Id"
    },

    "ECSClusterName":{
      "Type":"String",
      "Description":"Name of the ECS cluster.",
      "Default":"default",
      "MinLength": "1",
      "MaxLength": "255",
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9-]*",
      "ConstraintDescription": "Cluster name must start with a letter and can only contain letters, numbers, or hyphens."
    },

    "KeyPairName":{
      "Type":"AWS::EC2::KeyPair::KeyName",
      "Description":"Name of an existing EC2 KeyPair to enable SSH access to the ECS instances."
    },

    "CFS3BucketName": {
      "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
      "Default": "cloudstax",
      "Type": "String",
      "ConstraintDescription": "The CloudFormation template bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
      "Description": "S3 bucket name for the CloudFormation templates. The CloudFormation template bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
    },
    "CFS3KeyPrefix": {
        "AllowedPattern": "^[0-9a-zA-Z-/]*$",
        "Default": "openmanage/releases/latest/cf-templates",
        "Type": "String",
        "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
        "Description": "S3 key prefix for the CloudFormation assets. The CloudFormation S3 key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with a hyphen (-)."
    },

    "VPCID": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VPC-ID of your existing Virtual Private Cloud (VPC) where you want to deploy the ECS cluster.",
      "AllowedPattern": "vpc-[0-9a-z]{8}"
    },
    "Subnet1ID": {
      "Type": "AWS::EC2::Subnet::Id",
      "Description": "Subnet-ID the existing subnet in your VPC where you want to deploy the first AutoScalingGroup.",
      "AllowedPattern": "subnet-[0-9a-z]{8}"
    },
    "Subnet2ID": {
      "Type": "AWS::EC2::Subnet::Id",
      "Description": "Subnet-ID the existing subnet in your VPC where you want to deploy the second AutoScalingGroup.",
      "AllowedPattern": "subnet-[0-9a-z]{8}"
    },
    "Subnet3ID": {
      "Type": "AWS::EC2::Subnet::Id",
      "Description": "Subnet-ID the existing subnet in your VPC where you want to deploy the third AutoScalingGroup.",
      "AllowedPattern": "subnet-[0-9a-z]{8}"
    },

    "AvailabilityZones": {
      "Description": "List of Availability Zones to use for the subnets in the VPC. Note: The logical order is preserved.",
      "Type": "List<AWS::EC2::AvailabilityZone::Name>"
    },
    "DesiredCapacityPerAZ":{
      "Type":"Number",
      "Default":"1",
      "Description":"Number of instances to launch in one AutoScalingGroup."
    },
    "MaxSizePerAZ":{
      "Type":"Number",
      "Default":"1",
      "Description":"Maximum number of instances that can be launched in one AutoScalingGroup."
    },
    "NodeInstanceType":{
      "Description":"EC2 instance type",
      "Type":"String",
      "Default":"t2.micro",
      "AllowedValues":[
        "t2.micro",
        "t2.small",
        "t2.medium",
        "t2.large",
        "m3.medium",
        "m3.large",
        "m3.xlarge",
        "m3.2xlarge",
        "m4.large",
        "m4.xlarge",
        "m4.2xlarge",
        "m4.4xlarge",
        "m4.10xlarge",
        "c4.large",
        "c4.xlarge",
        "c4.2xlarge",
        "c4.4xlarge",
        "c4.8xlarge",
        "c3.large",
        "c3.xlarge",
        "c3.2xlarge",
        "c3.4xlarge",
        "c3.8xlarge",
        "r3.large",
        "r3.xlarge",
        "r3.2xlarge",
        "r3.4xlarge",
        "r3.8xlarge",
        "i2.xlarge",
        "i2.2xlarge",
        "i2.4xlarge",
        "i2.8xlarge"
      ],
      "ConstraintDescription":"Please choose a valid instance type."
    }
  },
  "Conditions": {
    "GovCloudCondition": {
      "Fn::Equals": [
        {
          "Ref": "AWS::Region"
        },
        "us-gov-west-1"
      ]
    }
  },
  "Resources":{
    "AppAccessSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPCID"
        },
        "GroupDescription": "Application instances with access to the services in ECS cluster"
      }
    },
    "EcsSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPCID"
        },
        "GroupDescription": "The access ports to the services in ECS cluster",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": {
              "Ref": "BastionSecurityGroupID"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27040",
            "ToPort": "27040",
            "SourceSecurityGroupId": {
              "Ref": "BastionSecurityGroupID"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "AppAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "5432",
            "ToPort": "5432",
            "SourceSecurityGroupId": {
              "Ref": "AppAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9042",
            "ToPort": "9042",
            "SourceSecurityGroupId": {
              "Ref": "AppAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9160",
            "ToPort": "9160",
            "SourceSecurityGroupId": {
              "Ref": "AppAccessSecurityGroup"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "2181",
            "ToPort": "2181",
            "SourceSecurityGroupId": {
              "Ref": "AppAccessSecurityGroup"
            }
          }
        ]
      }
    },
    "EcsInternalSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPCID"
        },
        "GroupDescription": "The inter-server access ports in ECS cluster",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "2000",
            "ToPort": "30000",
            "SourceSecurityGroupId": {
              "Ref": "EcsSecurityGroup"
            }
          }
        ]
      }
    },

    "DynamoDBTables": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-dynamodb.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        },
        "Parameters": {
          "ECSClusterName": {
            "Ref": "ECSClusterName"
          }
        }
      }
    },

    "ECSClusterStack":{
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-ecs.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        },
        "Parameters": {
          "ECSClusterName": {
            "Ref": "ECSClusterName"
          },
          "AvailabilityZones": {
            "Fn::Join": [
              ",",
              {
                "Ref": "AvailabilityZones"
              }
            ]
          }
        }
      }
    },
    "OpenManageECSService":{
      "DependsOn": [
        "ECSClusterStack",
        "DynamoDBTables"
      ],
      "Type":"AWS::ECS::Service",
      "Properties":{
        "Cluster":{
          "Fn::GetAtt": [
            "ECSClusterStack",
            "Outputs.ECSCluster"
          ]
        },
        "DesiredCount":"1",
        "ServiceName": "openmanage-manageserver",
        "TaskDefinition":{
          "Fn::GetAtt": [
            "ECSClusterStack",
            "Outputs.OpenManageServerTaskdefinition"
          ]
        }
      }
    },

    "EC2InstanceProfileStack":{
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-iamprofile.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        }
      }
    },

    "ECSAutoScalingGroup1": {
      "DependsOn": [
        "ECSClusterStack",
        "EC2InstanceProfileStack",
      ],
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-autoscalegroup.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        },
        "Parameters": {
          "ECSClusterName": {
            "Ref": "ECSClusterName"
          },
          "KeyPairName": {
            "Ref": "KeyPairName"
          },
          "SubnetIDs": {
            "Ref": "Subnet1ID"
          },
          "DesiredCapacity": {
            "Ref": "DesiredCapacityPerAZ"
          },
          "MaxSize":{
            "Ref": "MaxSizePerAZ"
          },
          "EcsSecurityGroupID": {
            "Ref": "EcsSecurityGroup"
          },
          "EcsInternalSecurityGroupID": {
            "Ref": "EcsInternalSecurityGroup"
          },
          "NodeInstanceProfileID": {
            "Fn::GetAtt": [
              "EC2InstanceProfileStack",
              "Outputs.NodeInstanceProfile"
            ]
          },
          "NodeInstanceType":{
            "Ref": "NodeInstanceType"
          }
        }
      }
    },
    "ECSAutoScalingGroup2": {
      "DependsOn": [
        "ECSClusterStack",
        "EC2InstanceProfileStack"
      ],
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-autoscalegroup.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        },
        "Parameters": {
          "ECSClusterName": {
            "Ref": "ECSClusterName"
          },
          "KeyPairName": {
            "Ref": "KeyPairName"
          },
          "SubnetIDs": {
            "Ref": "Subnet2ID"
          },
          "DesiredCapacity": {
            "Ref": "DesiredCapacityPerAZ"
          },
          "MaxSize":{
            "Ref": "MaxSizePerAZ"
          },
          "EcsSecurityGroupID": {
            "Ref": "EcsSecurityGroup"
          },
          "EcsInternalSecurityGroupID": {
            "Ref": "EcsInternalSecurityGroup"
          },
          "NodeInstanceProfileID": {
            "Fn::GetAtt": [
              "EC2InstanceProfileStack",
              "Outputs.NodeInstanceProfile"
            ]
          },
          "NodeInstanceType":{
            "Ref": "NodeInstanceType"
          }
        }
      }
    },
    "ECSAutoScalingGroup3": {
      "DependsOn": [
        "ECSClusterStack",
        "EC2InstanceProfileStack"
      ],
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Sub": [
            "https://${CFS3BucketName}.${QSS3Region}.amazonaws.com/${CFS3KeyPrefix}/openmanage-autoscalegroup.template",
            {
              "QSS3Region": {
                "Fn::If": [
                  "GovCloudCondition",
                  "s3-us-gov-west-1",
                  "s3"
                ]
              }
            }
          ]
        },
        "Parameters": {
          "ECSClusterName": {
            "Ref": "ECSClusterName"
          },
          "KeyPairName": {
            "Ref": "KeyPairName"
          },
          "SubnetIDs": {
            "Ref": "Subnet3ID"
          },
          "DesiredCapacity": {
            "Ref": "DesiredCapacityPerAZ"
          },
          "MaxSize":{
            "Ref": "MaxSizePerAZ"
          },
          "EcsSecurityGroupID": {
            "Ref": "EcsSecurityGroup"
          },
          "EcsInternalSecurityGroupID": {
            "Ref": "EcsInternalSecurityGroup"
          },
          "NodeInstanceProfileID": {
            "Fn::GetAtt": [
              "EC2InstanceProfileStack",
              "Outputs.NodeInstanceProfile"
            ]
          },
          "NodeInstanceType":{
            "Ref": "NodeInstanceType"
          }
        }
      }
    }
  },
  "Outputs":{
    "ECSCluster":{
      "Value":{
        "Fn::GetAtt": [
          "ECSClusterStack",
          "Outputs.ECSCluster"
        ]
      }
    },
    "AppAccessSecurityGroup":{
      "Value":{
        "Ref": "AppAccessSecurityGroup"
      }
    }
  }
}
